feat: add mobilr menu

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 0 1.25rem;
-  height: 3.125rem;
+  padding: 0 20px;
+  height: 50px;
   background-color: #e76712;
   box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
@@ -17,4 +17,77 @@
   line-height: 1;
   font-weight: 700px;
   color: #ffffff;
+}
+
+.header__nav {
+  margin-left: auto;
+}
+
+.header__nav-list {
+  display: flex;
+  list-style-type: none;
+}
+
+.header__nav-item {
+  font-size: 20px;
+  line-height: 1;
+  color: #ffffff;
+}
+
+.header__nav-item:nth-child(n + 2) {
+  margin-left: 20px;
+}
+
+.header__menu-button {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .header__nav {
+    position: fixed;
+    top: 0;
+    left: -225px;
+    display: flex;
+    flex-direction: column;
+    width: 220px;
+    height: 100%;
+    background-color: #fff;
+    border: 2px solid #e76712;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: transform 0.3s linear;
+  }
+
+  .header__nav.active {
+    transform: translateX(100%);
+  }
+
+  .header__nav-list {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+    padding-left: 60px;
+  }
+
+  .header__nav-item {
+    margin: 10px 0;
+    font-weight: 500;
+    color: #e76712;
+  }
+
+  .header__nav-item:nth-child(n + 2) {
+    margin-left: 0;
+  }
+
+  .header__menu-button {
+    display: block;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    padding: 0;
+    border: 0;
+  }
 }
